Final commit added js-assets and completed the webpage

--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traver Advisor</title>
-    <link rel="stylesheets" href="css-assets/styles.css">
+    <link rel="stylesheet" href="css-assets/style.css">
+
 </head>
 <body>
 <div class="container">
     <h1>Welcom to the Travel advisor</h1>
-    <p>Find you next travel </p>
+    <p>Find you next travel destination</p>
 </div>
+<!--Accordion section-->
+<section class="container">
+    <h2>Locations</h2>
+    <div class="accordion">
+        <button class="accordion-btn">Why Japan?</button>
+        <div class="accordion-content">
+            Japan offers a unique blend of ancient traditions and modern innovations, with stunning natural landscapes, delicious cuisine, and a rich cultural heritage. 
+        </div>
+        <button class="accordion-btn">What is interesting in france?</button>
+        <div class="accordion-content">
+            France is a top travel destination due to its stunning landscapes, rich history, and world-renowned cuisine. From the vibrant culture of Paris to the picturesque countryside, there's something for everyone to enjoy.
+        </div>
+        <button class="accordion-btn">What's the Buzz with Greece</button>
+        <div class="accordion-content">
+            Greece offers stunning natural beauty, rich history, delicious cuisine, and vibrant culture, making it a top travel destination. With its beautiful islands, ancient ruins, and welcoming locals.
+        </div>
+    </div>
+</section>
 
-<div class= "container">
-    <h2></h2>
-</div>
+<!--Scapes with light box section-->
+<section class="container">
+    <h2>Which scapes Interests You?</h2>
+    <div class="scapes">
+        <img src="_images/japanskapes.jpg" alt="Japanese Scape">
+        <img src="_images/frenchskapes.jpg" alt="French Scape">
+        <img src="_images/greekskapes.jpg" alt="Greek Scape">
+    </div>
+</section>
 
-    
-<div>
-</div>
-    <p>Not marked up.</p>
-   <!-- This is a list of my hobbies-->
+<script src="js-assets/script.js"></script>
 </body>
 </html>
